--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
     <title>Spirit</title>
   </head>
+
   <body>
     <section class="section1">
       <header>
@@ -20,7 +21,7 @@
       </div>
       <div class="text">
         <p class="JK">Жилой комплекс</p>
-        <h1 class="name">S P R I T</h1>
+        <h1 class="name">S P I R I T</h1>
         <p class="texti">
           Начни жить в современном ЖК <br />
           и повысь уровень личного комфорта
@@ -148,33 +149,34 @@
         <div class="tab_item active" id="tab_2">
           <div class="conetent_tab">
             <div class="contbox sbox1">
-              <img src="/img/image 51.png" alt="" />
-              <h3>Рукапашный Бой</h3>
+              <img src="/img/section_3/rucfight.png" alt="" />
+              <h3>Рукoпашный Бой</h3>
               <p>
-                Школа полного дня для <br />
-                1-11 классов <br />
-                с углублённым изучением <br />
-                школьных предметов
+                спортивная секция для <br />
+                тех, кто любит ближний <br />
+                бой и развитие своих <br />
+                навыков в уличных <br />
+                схватках.
               </p>
             </div>
             <div class="contbox sbox1 active">
-              <img src="/img/image 53 (1).png" alt="" />
+              <img src="/img/section_3/veik-park.png" alt="" />
               <h3>Вейк-Парк</h3>
               <p>
-                В университете преподают <br />
-                ведущие российские <br />
-                специолисты в сферах IT <br />
-                и робототехники
+                лучшее место для <br />
+                любителей <br />
+                экстремальных видов <br />
+                спорта.
               </p>
             </div>
             <div class="contbox sbox1">
-              <img src="/img/image 52.png" alt="" />
+              <img src="/img/section_3/starClub.png" alt="" />
               <h3>Star Club</h3>
               <p>
-                Подходит для детей от 3-х лет. <br />
-                Здесь дети уже начинают <br />
-                готовиться к школе, посещая <br />
-                порядка 20 занятий в неделю
+                это превосходный фитнес <br />
+                клуб, который предоставляет <br />
+                своим клиентам <br />
+                высококачественный сервис
               </p>
             </div>
           </div>
@@ -182,33 +184,36 @@
         <div class="tab_item" id="tab_3">
           <div class="conetent_tab">
             <div class="contbox sbox1">
-              <img src="/img/image 51.png" alt="" />
+              <img src="/img/section_3/lenta.png" alt="" />
               <h3>Лента</h3>
               <p>
-                Школа полного дня для <br />
-                1-11 классов <br />
-                с углублённым изучением <br />
-                школьных предметов
+                это одна из крупнейших <br />
+                российских сетей <br />
+                супермаркетов, которая <br />
+                предлагает широкий <br />
+                ассортимент товаров
               </p>
             </div>
             <div class="contbox sbox1">
-              <img src="/img/image 53 (1).png" alt="" />
+              <img src="/img/section_3/magnit.png" alt="" />
               <h3>Магнит</h3>
               <p>
-                В университете преподают <br />
-                ведущие российские <br />
-                специолисты в сферах IT <br />
-                и робототехники
+                это российская розничная <br />
+                сеть гипермаркетов, <br />
+                которая предлагает <br />
+                широкий выбор продуктов <br />
+                питания
               </p>
             </div>
             <div class="contbox sbox1">
-              <img src="/img/image 52.png" alt="" />
+              <img src="/img/section_3/shestorochka.png" alt="" />
               <h3>Шестёрочка</h3>
               <p>
-                Подходит для детей от 3-х лет. <br />
-                Здесь дети уже начинают <br />
-                готовиться к школе, посещая <br />
-                порядка 20 занятий в неделю
+                это российская сеть <br />
+                магазинов удобных покупок, <br />
+                которая предлагает <br />
+                широкий выбор продуктов <br />
+                питания
               </p>
             </div>
           </div>
@@ -216,33 +221,33 @@
         <div class="tab_item" id="tab_4">
           <div class="conetent_tab">
             <div class="contbox sbox1">
-              <img src="/img/image 51.png" alt="" />
+              <img src="/img/section_3/beluga.png" alt="" />
               <h3>Белуга</h3>
               <p>
-                Школа полного дня для <br />
-                1-11 классов <br />
-                с углублённым изучением <br />
-                школьных предметов
+                широкий выбор блюд, <br />
+                приготовленных из <br />
+                свежих продуктов от <br />
+                лучших поставщиков
               </p>
             </div>
             <div class="contbox sbox1">
-              <img src="/img/image 53 (1).png" alt="" />
-              <h3>Каспий</h3>
+              <img src="/img/section_3/soyka.png" alt="" />
+              <h3>Сойка</h3>
               <p>
-                В университете преподают <br />
-                ведущие российские <br />
-                специолисты в сферах IT <br />
-                и робототехники
+                предлагающее <br />
+                высококачественный <br />
+                кофе и другие напитки. <br />
+                Мы выбираем только <br />
+                лучшие зерна кофе
               </p>
             </div>
             <div class="contbox sbox1">
-              <img src="/img/image 52.png" alt="" />
+              <img src="/img/section_3/onegin.png" alt="" />
               <h3>Онегин</h3>
               <p>
-                Подходит для детей от 3-х лет. <br />
-                Здесь дети уже начинают <br />
-                готовиться к школе, посещая <br />
-                порядка 20 занятий в неделю
+                известна своей <br />
+                изысканной кухней и <br />
+                уютной атмосферой
               </p>
             </div>
           </div>
@@ -250,33 +255,35 @@
         <div class="tab_item" id="tab_5">
           <div class="conetent_tab">
             <div class="contbox sbox1">
-              <img src="/img/image 51.png" alt="" />
+              <img src="/img/section_3/med-express.png" alt="" />
               <h3>Мед-экспресс</h3>
               <p>
-                Школа полного дня для <br />
-                1-11 классов <br />
-                с углублённым изучением <br />
-                школьных предметов
+                предлагает широкий <br />
+                спектр медицинских <br />
+                услуг для всех <br />
+                возрастных групп
               </p>
             </div>
             <div class="contbox sbox1">
-              <img src="/img/image 53 (1).png" alt="" />
+              <img src="/img/section_3/dental.png" alt="" />
               <h3>Dental palace</h3>
               <p>
-                В университете преподают <br />
-                ведущие российские <br />
-                специолисты в сферах IT <br />
-                и робототехники
+                специализирующаяся на <br />
+                оказании <br />
+                высококачественных <br />
+                стоматологических услуг. <br />
+                Наша команда состоит из <br />
+                опытных стоматологов
               </p>
             </div>
             <div class="contbox sbox1">
-              <img src="/img/image 52.png" alt="" />
+              <img src="/img/section_3/RZD.png" alt="" />
               <h3>РЖД-Больница</h3>
               <p>
-                Подходит для детей от 3-х лет. <br />
-                Здесь дети уже начинают <br />
-                готовиться к школе, посещая <br />
-                порядка 20 занятий в неделю
+                Больница оснащена <br />
+                самым современным <br />
+                медицинским <br />
+                оборудованием
               </p>
             </div>
           </div>
@@ -286,16 +293,28 @@
       <section class="section5">
         <h2>Планировка Квартир</h2>
         <div class="navbar">
-          <div class="nav_effect nav1"><p>Однокомнатные</p></div>
-          <div class="nav_effect nav2"><p>Двухкомнатные</p></div>
-          <div class="nav_effect nav3"><p>Трёхкомнатные</p></div>
-        </div>
-        <div class="slider">
-          <div class="content">
-            <img src="/img/Rectangle 109.png" alt="" />
+          <div class="nav_effecti activ" data-tab="#tab_11">
+            <p>Однокомнатные</p>
+          </div>
+          <div class="nav_effecti" data-tab="#tab_22">
+            <p>Двухкомнатные</p>
+          </div>
+          <div class="nav_effecti" data-tab="#tab_33">
+            <p>Трёхкомнатные</p>
           </div>
         </div>
-        <div class="conteyner"><div class="prog"></div></div>
+        <div class="slider">
+          <div class="content activ" id="tab_11">
+            <img src="/img/Rectangle 109.png" alt="" />
+          </div>
+          <div class="content" id="tab_22">
+            <img src="/img/image 54.png" alt="" /> ,
+          </div>
+          <div class="content" id="tab_33">
+            <img src="/img/image 55.png" alt="" /> .
+          </div>
+        </div>
+        <script src="/tabs2.js"></script>
       </section>
       <h2 class="minisec">Контакты</h2>
     </div>
