--- a/index.html
+++ b/index.html
@@ -334,14 +334,14 @@
             <div class="line"></div>
             <p>И мы вас проконсультируем</p>
           </div>
-        </div>
+        </div><script src="/phone.js"></script>
         <div class="form">
           <div class="content_form">
             <h5>Заполните форму</h5>
             <p>Мы вам сразу перезвоним</p>
             <form>
               <input type="text" placeholder="Ваше имя" id="name" required pattern="[а-яА-Я]+" title="Только латинские буквы" /> <br />
-              <input type="tel" placeholder="Номер телефона +7 (999) 999 99-99" id="number" required />
+              <input type="tel " placeholder="Номер телефона +7 (999) 999 99-99" class="art-stranger" id="number" required />
               <br />
               <a href="#"
               ><input
@@ -356,5 +356,6 @@
         </div>
       </div>
     </section>
+    
   </body>
 </html>
