--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           Начни жить в современном ЖК <br />
           и повысь уровень личного комфорта
         </p>
-        <div class="btn"><a href="">Выбрать квартиру</a></div>
+        <div class="btn"><a href="#bottom">Выбрать квартиру</a></div>
       </div>
 
       <div class="light"></div>
@@ -326,7 +326,7 @@
       </section>
       <h2 class="minisec">Контакты</h2>
     </div>
-    <section class="section6">
+    <section class="section6" id="bottom">
       <div class="obyed">
         <div class="conteyner">
           <h4>Оставьте заявку</h4>
@@ -358,7 +358,7 @@
     </section>
     <script src="https://unpkg.com/imask"></script>
     <script src="/phone.js"></script>
-
+    <script src="/scroll.js"></script>
 
   </body>
 </html>
