--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/framework/swiper-bundle.min.css">
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./framework/swiper-bundle.min.css">
+    <link rel="stylesheet" href="./style.css" />
 
     <title>Spirit</title>
   </head>
@@ -13,12 +13,12 @@
   <body>
     <section class="section1">
       <header>
-        <img src="/img/logo.svg" alt="" class="logo" />
+        <img src="./img/logo.svg" alt="" class="logo" />
         <p class="addres">г. Астрахань ул. Яблочкова д. 16</p>
         <p class="numberus">+7 (999) 999 99-99</p>
       </header>
       <div class="apartcon">
-        <img src="/img/Apartment-PNG-Image 1.png" alt="" class="apart" />
+        <img src="./img/Apartment-PNG-Image 1.png" alt="" class="apart" />
       </div>
       <div class="text">
         <p class="JK">Жилой комплекс</p>
@@ -60,23 +60,23 @@
         </div>
         <div class="img_elem">
           <img
-            src="/img/section_2/House.png"
+            src="./img/section_2/House.png"
             alt=""
             class="imgItem imgItem_1"
           />
           <img
-            src="/img/section_2/Dimond.png"
+            src="./img/section_2/Dimond.png"
             alt=""
             class="imgItem imgItem_2"
           />
-          <img src="/img/section_2/Hert.png" alt="" class="imgItem imgItem_3" />
+          <img src="./img/section_2/Hert.png" alt="" class="imgItem imgItem_3" />
           <img
-            src="/img/section_2/soundOff.png"
+            src="./img/section_2/soundOff.png"
             alt=""
             class="imgItem imgItem_4"
           />
           <img src="" alt="" class="imgItem imgItem_5" />
-          <img src="/img/section_2/Time.png" alt="" class="imgItem imgItem_6" />
+          <img src="./img/section_2/Time.png" alt="" class="imgItem imgItem_6" />
         </div>
       </div>
     </section>
@@ -86,18 +86,18 @@
         <div class="wrapper">
           <div class="swiper">
               <div class="swiper-wrapper">
-                  <div class="swiper-slide"><img src="/img/photo_for_swiper/110-3.jpg"></div>
-                  <div class="swiper-slide"><img src="/img/photo_for_swiper/1619757373_21-p-krasivaya-dvukhetazhnaya-kvartira-21.jpg"></div>
-                  <div class="swiper-slide"><img src="/img/photo_for_swiper/1626242834_21-almode_ru-p-kvartira-kholostyaka-22.jpg"></div>
-                  <div class="swiper-slide"><img src="/img/photo_for_swiper/1626928478_9-almode_ru-p-vtoroi-svet-v-kvartire-9.jpg"></div>
-                  <div class="swiper-slide"><img src="/img/photo_for_swiper/3b9b2f1fcfcfbef939b167164ae1de8c.jpeg"></div>
-                  <div class="swiper-slide"><img src="/img/photo_for_swiper/it08b26wgmx0fqs0ebrsfeex2smvj6uv.jpg"></div>
+                  <div class="swiper-slide"><img src="./img/photo_for_swiper/110-3.jpg"></div>
+                  <div class="swiper-slide"><img src="./img/photo_for_swiper/1619757373_21-p-krasivaya-dvukhetazhnaya-kvartira-21.jpg"></div>
+                  <div class="swiper-slide"><img src="./img/photo_for_swiper/1626242834_21-almode_ru-p-kvartira-kholostyaka-22.jpg"></div>
+                  <div class="swiper-slide"><img src="./img/photo_for_swiper/1626928478_9-almode_ru-p-vtoroi-svet-v-kvartire-9.jpg"></div>
+                  <div class="swiper-slide"><img src="./img/photo_for_swiper/3b9b2f1fcfcfbef939b167164ae1de8c.jpeg"></div>
+                  <div class="swiper-slide"><img src="./img/photo_for_swiper/it08b26wgmx0fqs0ebrsfeex2smvj6uv.jpg"></div>
               </div>
-              <img src="img/next 2.png" class="swiper-button-prev">
-              <img src="/img/next 1.png" class="swiper-button-next">
+              <img src="./img/next 2.png" class="swiper-button-prev">
+              <img src="./img/next 1.png" class="swiper-button-next">
           </div>
-          <script src="/framework/swiper-bundle.min.js"></script>
-          <script src="/swiper.js"></script>
+          <script src="./framework/swiper-bundle.min.js"></script>
+          <script src="./swiper.js"></script>
       </section>
       <section class="section4">
         <h2>Инфраструктура</h2>
@@ -123,7 +123,7 @@
         <div class="tab_item" id="tab_1">
           <div class="conetent_tab">
             <div class="contbox sbox1">
-              <img src="/img/image 51.png" alt="" />
+              <img src="./img/image 51.png" alt="" />
               <h3>Школа</h3>
               <p>
                 Школа полного дня для <br />
@@ -133,7 +133,7 @@
               </p>
             </div>
             <div class="contbox sbox1">
-              <img src="/img/image 53 (1).png" alt="" />
+              <img src="./img/image 53 (1).png" alt="" />
               <h3>Университет</h3>
               <p>
                 В университете преподают <br />
@@ -143,7 +143,7 @@
               </p>
             </div>
             <div class="contbox sbox1">
-              <img src="/img/image 52.png" alt="" />
+              <img src="./img/image 52.png" alt="" />
               <h3>Детский сад</h3>
               <p>
                 Подходит для детей от 3-х лет. <br />
@@ -157,7 +157,7 @@
         <div class="tab_item active" id="tab_2">
           <div class="conetent_tab">
             <div class="contbox sbox1">
-              <img src="/img/section_3/rucfight.png" alt="" />
+              <img src="./img/section_3/rucfight.png" alt="" />
               <h3>Рукoпашный Бой</h3>
               <p>
                 спортивная секция для <br />
@@ -168,7 +168,7 @@
               </p>
             </div>
             <div class="contbox sbox1 active">
-              <img src="/img/section_3/veik-park.png" alt="" />
+              <img src="./img/section_3/veik-park.png" alt="" />
               <h3>Вейк-Парк</h3>
               <p>
                 лучшее место для <br />
@@ -178,7 +178,7 @@
               </p>
             </div>
             <div class="contbox sbox1">
-              <img src="/img/section_3/starClub.png" alt="" />
+              <img src="./img/section_3/starClub.png" alt="" />
               <h3>Star Club</h3>
               <p>
                 это превосходный фитнес <br />
@@ -192,7 +192,7 @@
         <div class="tab_item" id="tab_3">
           <div class="conetent_tab">
             <div class="contbox sbox1">
-              <img src="/img/section_3/lenta.png" alt="" />
+              <img src="./img/section_3/lenta.png" alt="" />
               <h3>Лента</h3>
               <p>
                 это одна из крупнейших <br />
@@ -203,7 +203,7 @@
               </p>
             </div>
             <div class="contbox sbox1">
-              <img src="/img/section_3/magnit.png" alt="" />
+              <img src="./img/section_3/magnit.png" alt="" />
               <h3>Магнит</h3>
               <p>
                 это российская розничная <br />
@@ -214,7 +214,7 @@
               </p>
             </div>
             <div class="contbox sbox1">
-              <img src="/img/section_3/shestorochka.png" alt="" />
+              <img src="./img/section_3/shestorochka.png" alt="" />
               <h3>Шестёрочка</h3>
               <p>
                 это российская сеть <br />
@@ -229,7 +229,7 @@
         <div class="tab_item" id="tab_4">
           <div class="conetent_tab">
             <div class="contbox sbox1">
-              <img src="/img/section_3/beluga.png" alt="" />
+              <img src="./img/section_3/beluga.png" alt="" />
               <h3>Белуга</h3>
               <p>
                 широкий выбор блюд, <br />
@@ -239,7 +239,7 @@
               </p>
             </div>
             <div class="contbox sbox1">
-              <img src="/img/section_3/soyka.png" alt="" />
+              <img src="./img/section_3/soyka.png" alt="" />
               <h3>Сойка</h3>
               <p>
                 предлагающее <br />
@@ -250,7 +250,7 @@
               </p>
             </div>
             <div class="contbox sbox1">
-              <img src="/img/section_3/onegin.png" alt="" />
+              <img src="./img/section_3/onegin.png" alt="" />
               <h3>Онегин</h3>
               <p>
                 известна своей <br />
@@ -263,7 +263,7 @@
         <div class="tab_item" id="tab_5">
           <div class="conetent_tab">
             <div class="contbox sbox1">
-              <img src="/img/section_3/med-express.png" alt="" />
+              <img src="./img/section_3/med-express.png" alt="" />
               <h3>Мед-экспресс</h3>
               <p>
                 предлагает широкий <br />
@@ -273,7 +273,7 @@
               </p>
             </div>
             <div class="contbox sbox1">
-              <img src="/img/section_3/dental.png" alt="" />
+              <img src="./img/section_3/dental.png" alt="" />
               <h3>Dental palace</h3>
               <p>
                 специализирующаяся на <br />
@@ -285,7 +285,7 @@
               </p>
             </div>
             <div class="contbox sbox1">
-              <img src="/img/section_3/RZD.png" alt="" />
+              <img src="./img/section_3/RZD.png" alt="" />
               <h3>РЖД-Больница</h3>
               <p>
                 Больница оснащена <br />
@@ -297,7 +297,7 @@
           </div>
         </div>
       </section>
-      <script src="/main.js"></script>
+      <script src="./main.js"></script>
       <section class="section5">
         <h2>Планировка Квартир</h2>
         <div class="navbar">
@@ -313,16 +313,16 @@
         </div>
         <div class="slider">
           <div class="content activ" id="tab_11">
-            <img src="/img/Rectangle 109.png" alt="" />
+            <img src="./img/Rectangle 109.png" alt="" />
           </div>
           <div class="content" id="tab_22">
-            <img src="/img/image 54.png" alt="" /> ,
+            <img src="./img/image 54.png" alt="" /> ,
           </div>
           <div class="content" id="tab_33">
-            <img src="/img/image 55.png" alt="" /> .
+            <img src="./img/image 55.png" alt="" /> .
           </div>
         </div>
-        <script src="/tabs2.js"></script>
+        <script src="./tabs2.js"></script>
       </section>
       <h2 class="minisec">Контакты</h2>
     </div>
@@ -334,7 +334,7 @@
             <div class="line"></div>
             <p>И мы вас проконсультируем</p>
           </div>
-        </div><script src="/phone.js"></script>
+        </div><script src="./phone.js"></script>
         <div class="form">
           <div class="content_form">
             <h5>Заполните форму</h5>
@@ -357,8 +357,8 @@
       </div>
     </section>
     <script src="https://unpkg.com/imask"></script>
-    <script src="/phone.js"></script>
-    <script src="/scroll.js"></script>
+    <script src="./phone.js"></script>
+    <script src="./scroll.js"></script>
 
   </body>
 </html>
